--- a/css/14_입력한색으로변경.css
+++ b/css/14_입력한색으로변경.css
@@ -1,21 +1,27 @@
-.containerbox{
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
+  main{
+    width: 800px;   
+    margin: 30px auto;
+    text-align: center;
+  }
+  .color-area{
     display: flex;
     justify-content: space-between;
-}
+  }
 
-.conbox{
+.container{
     width: 18%;
     flex-direction: column;
     display: flex;
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
 
-#box{
+.box{
     box-sizing: border-box;
     border: 1px solid black;
     height: 100px;
@@ -23,11 +29,34 @@
     transition-duration: 0.5s;
 }
 
-.containerbox *{
+.container *{
     margin-bottom: 5px;
 }
 
 #btn{
-    width: 50%;
-    margin: auto 25% ;
+    width: 80%;
+    margin-top: 10px;
+    cursor: pointer;
+    
 }
+
+
+/* 버튼 예시 */
+#changeButton{
+    width: 80%;
+    margin-top: 10px;
+    background-color: white;
+    border : 2px solid pink;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  
+  #changeButton:hover{
+    color : white;
+    background-color: pink;
+  }
+  
+  #changeButton:active{
+    border: 2px solid black;
+  }
