--- a/css/29_클릭한숫자기록하기.css
+++ b/css/29_클릭한숫자기록하기.css
@@ -1,29 +1,31 @@
-#lottoBoard{
-  border: 1px solid black;
-  width: 250px;
-  height: 450px;
+#table {
+  width: 150px;
+  height: 200px;
 
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
+  
 }
-.number {
+
+.number{
   box-sizing: border-box;
   border: 1px solid black;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  margin: 10px;
+  width: 50px;
+  height: 50px;
 
   display: flex;
   justify-content: center;
   align-items: center;
-
+  
   cursor: pointer;
 
   user-select: none;
 }
 
-.active{
+.number:hover{
   background-color: aquamarine;
+}
+.number:active{
+  background-color: blueviolet;
 }
