--- a/UI구현_이은재/UI구현_이은재.css
+++ b/UI구현_이은재/UI구현_이은재.css
@@ -21,6 +21,7 @@
 #table{
   border-top: 1px solid rgb(199, 199, 199);
   width: 310px;
+  height: 410px;
 
   display: flex;
   flex-wrap: wrap;
@@ -29,10 +30,10 @@
 .number{
   /* border: 1px solid black; */
   border-radius: 50%;
-
   font-size: 30px;
   font-weight: bold;
   width: 100px ;  height: 100px;
+
 
   display: flex;
   justify-content: center;
@@ -42,6 +43,7 @@
 .number:hover{
   background-color: gainsboro;
   cursor: pointer;
+  transition-duration: 0.3s;
 }
 /* 추가버튼 */
 #add{
